--- a/pkg/tsconfig/tsconfig.next.json
+++ b/pkg/tsconfig/tsconfig.next.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "incremental": true,
     "jsx": "preserve",
