--- a/pkg/tsconfig/tsconfig.next.json
+++ b/pkg/tsconfig/tsconfig.next.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
+    "esModuleInterop": true,
     "incremental": true,
     "jsx": "preserve",
     "plugins": [{ "name": "next" }]
