fix: adjust base tsconfig.json

--- a/pkg/tsconfig/tsconfig.node.json
+++ b/pkg/tsconfig/tsconfig.node.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "allowImportingTsExtensions": true,
     "allowJs": true,
+    "customConditions": ["development"],
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
