--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,14 @@ max_line_length = 100
 [*.md]
 trim_trailing_whitespace = false
 
-[Makefile]
+[*.{cs,py}]
+indent_size = 4
+indent_style = space
+
+[*.go]
+indent_size = 4
 indent_style = tab
 
-[*.{go,py}]
-indent_style = tab
+[Makefile]
 indent_size = 4
+indent_style = tab
