--- a/package.json
+++ b/package.json
@@ -40,28 +40,29 @@
     "bump": "ncu --dep prod,dev,peer -u"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "eslint": "^9.17.0",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2"
+    "@types/node": "^22.13.14",
+    "eslint": "^9.23.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@eslint/js": "^9.17.0",
-    "@next/eslint-plugin-next": "^15.1.3",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-unicorn": "^56.0.1",
-    "eslint-plugin-vitest": "^0.5.4",
-    "globals": "^15.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "typescript-eslint": "^8.18.2"
+    "@eslint/js": "^9.23.0",
+    "@next/eslint-plugin-next": "^15.2.4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-unicorn": "^58.0.0",
+    "globals": "^16.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript-eslint": "^8.29.0"
   },
   "peerDependencies": {
-    "eslint": "^9.17.0",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2"
+    "eslint": "^9.23.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
