--- a/pkg/tsconfig/tsconfig.node.json
+++ b/pkg/tsconfig/tsconfig.node.json
@@ -1,22 +1,33 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    // no funny business
+    "erasableSyntaxOnly": true,
+    "verbatimModuleSyntax": true,
+
+    // hella strict
+    // https://whatislove.dev/articles/the-strictest-typescript-config/
     "allowJs": true,
-    "customConditions": ["development"],
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "isolatedModules": true,
-    "lib": ["Dom", "DOM.Iterable", "ESNext", "ESNext.Decorators"],
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "moduleResolution": "Bundler",
-    "noEmit": true,
-    "preserveSymlinks": true,
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
+    "exactOptionalPropertyTypes": true,
+    // "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
     "strict": true,
-    "target": "esnext"
+    "strictNullChecks": true,
+
+    // esm, the node way
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "lib": ["ESNext"],
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "target": "esnext",
+
+    // pnpm compatibility
+    "preserveSymlinks": true,
+
+    // importing json happens more often than you think
+    "resolveJsonModule": true,
+
+    // don't try to check for errors on imported libs
+    "skipLibCheck": true
   }
 }
