--- a/pkg/tsconfig/tsconfig.vite.json
+++ b/pkg/tsconfig/tsconfig.vite.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "lib": ["Dom", "DOM.Iterable", "ESNext"]
   }
 }
