fix: actually disable noUnresolvedImports for now, on all files

--- a/pkg/biome.jsonc
+++ b/pkg/biome.jsonc
@@ -1,59 +1,65 @@
 {
-  "vcs": {
-    "clientKind": "git",
-    "enabled": true,
-    "useIgnoreFile": true
-  },
-  "files": {
-    "ignoreUnknown": true,
-    "includes": ["**/*", "!build/**", "!node_modules/**", "!dist/**", "!coverage/**"]
-  },
-  "assist": {
-    "actions": {
-      "source": {
-        "organizeImports": "on",
-        "useSortedAttributes": "on",
-        // TODO: check later
-        // off for now, it's really wonky
-        "useSortedKeys": "off",
-        "useSortedProperties": "on"
-      }
-    }
-  },
-  "formatter": {
-    "enabled": true,
-    "formatWithErrors": true,
-    "lineWidth": 100,
-    "useEditorconfig": true
-  },
-  "linter": {
-    "domains": {
-      "test": "all"
-    },
-    "enabled": true,
-    "rules": {
-      "a11y": "on",
-      "complexity": "on",
-      "correctness": "on",
-      "nursery": "on",
-      "performance": "on",
-      "security": "on",
-      "style": "on",
-      "suspicious": "on"
-    }
-  },
-  "overrides": [
-    {
-      "includes": ["*"],
-      "linter": {
-        "rules": {
-          "nursery": {
-            // TODO: check later
-            // not working properly, flags stuff from node_modules as unresolved
-            "noUnresolvedImports": "off"
-          }
-        }
-      }
-    }
-  ]
+	"vcs": {
+		"clientKind": "git",
+		"enabled": true,
+		"useIgnoreFile": true
+	},
+	"files": {
+		"ignoreUnknown": true,
+		"includes": [
+			"**/*",
+			"!build/**",
+			"!node_modules/**",
+			"!dist/**",
+			"!coverage/**"
+		]
+	},
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on",
+				"useSortedAttributes": "on",
+				// TODO: check later
+				// off for now, it's really wonky
+				"useSortedKeys": "off",
+				"useSortedProperties": "on"
+			}
+		}
+	},
+	"formatter": {
+		"enabled": true,
+		"formatWithErrors": true,
+		"lineWidth": 100,
+		"useEditorconfig": true
+	},
+	"linter": {
+		"domains": {
+			"test": "all"
+		},
+		"enabled": true,
+		"rules": {
+			"a11y": "on",
+			"complexity": "on",
+			"correctness": "on",
+			"nursery": "on",
+			"performance": "on",
+			"security": "on",
+			"style": "on",
+			"suspicious": "on"
+		}
+	},
+	"overrides": [
+		{
+			"includes": ["**/*"],
+			"linter": {
+				"rules": {
+					"nursery": {
+						// TODO: check later
+						// not working properly, flags stuff from node_modules as unresolved
+						"noUnresolvedImports": "off"
+					}
+				}
+			}
+		}
+	]
 }
